2004-06-09  Todd Berman  <tberman@sevenl.net>

	* gdk/Gdk.metadata: mark Window.SetBackPixmap as null_ok.
	* glib/Object.cs: in set_Raw, if value == IntPtr.Zero, dont put that
	in the weakref hashtable, as it creates later issues with gtk+
	returning null and gtk# mistaking if for an object.

2004-06-08  Mike Kestner  <mkestner@ximian.com>

	* gnomedb/Application.cs : add a missing DllImport.

2004-06-08  Mike Kestner  <mkestner@ximian.com>

	* gdk/Gdk.metadata : mark array param on Drawable.*Image.

2004-06-08  Mike Kestner  <mkestner@ximian.com>

	* gdk/Gdk.metadata : mark array param on Drawable.DrawGrayImage.

2004-06-07  Mike Kestner  <mkestner@ximian.com>

	* */Makefile.am : s|--unsafe|/unsafe to remove a mcs-ism that jluke
	exposed in his cygwin build patch.

2004-06-07  Jeroen Zwartepoorte  <jeroen@xs4all.nl>

	* configure.in: Add pango pkg-config check.
	* pango/Layout.custom: Updated custom code to new opaque LayoutLine.
	* pango/LayoutLine.custom: Properties for LayoutLine struct fields.
	* pango/Makefile.am:
	* pango/Pango.metadata: Make LayoutLine opaque [Fixes #59666].
	* pango/glue/.cvsignore:
	* pango/glue/Makefile.am:
	* pango/glue/layoutline.c: glue for the LayoutLine struct fields.
	* pango/glue/makefile.win32:
	* pango/glue/win32dll.c:

2004-06-07  Todd Berman  <tberman@sevenl.net>

	* gtk/Widget.custom: expose some easy bool properties for checking
	certain WidgetFlags. Make Allocation a settable property.
	* gtk/glue/widget.c: bit of glue to make Allocation settable.
	* gdk/Window.custom: expose UserData as a usable IntPtr property.
	* gdk/Gdk.metadata: hide old GetUserData/SetUserData methods.
	* doc/*: ran the updater.

2004-06-07  Jeroen Zwartepoorte  <jeroen@xs4all.nl>

	* gtk/Widget.custom: Add FocusLineWidth property.
	* gtk/glue/widget.c: (gtksharp_gtk_widget_set_flags),
	(gtksharp_gtk_widget_style_get_int): glue for getting an integer style
	property.

2004-06-07  John Luke  <jluke@cfl.rr.com>
 