@@ -534,19 +534,6 @@
         <remarks>To be added</remarks>
       </Docs>
     </Member>
-    <Member MemberName="ChildType">
-      <MemberSignature Language="C#" Value="public GLib.GType ChildType ();" />
-      <MemberType>Method</MemberType>
-      <ReturnValue>
-        <ReturnType>GLib.GType</ReturnType>
-      </ReturnValue>
-      <Parameters />
-      <Docs>
-        <summary>To be added</summary>
-        <returns>a <see cref="T:GLib.GType" /></returns>
-        <remarks>To be added</remarks>
-      </Docs>
-    </Member>
     <Member MemberName="Forall">
       <MemberSignature Language="C#" Value="public void Forall (Gtk.Callback cb);" />
       <MemberType>Method</MemberType>
@@ -668,6 +655,34 @@
         <summary>To be added</summary>
         <param name="include_internals">a <see cref="T:System.Boolean" /></param>
         <param name="invoker">a <see cref="T:Gtk.Container+CallbackInvoker" /></param>
+        <remarks>To be added</remarks>
+      </Docs>
+    </Member>
+    <Member MemberName="OverrideChildType">
+      <MemberSignature Language="C#" Value="protected static void OverrideChildType (GLib.GType gtype);" />
+      <MemberType>Method</MemberType>
+      <ReturnValue>
+        <ReturnType>System.Void</ReturnType>
+      </ReturnValue>
+      <Parameters>
+        <Parameter Name="gtype" Type="GLib.GType" />
+      </Parameters>
+      <Docs>
+        <summary>To be added</summary>
+        <param name="gtype">a <see cref="T:GLib.GType" /></param>
+        <remarks>To be added</remarks>
+      </Docs>
+    </Member>
+    <Member MemberName="ChildType">
+      <MemberSignature Language="C#" Value="public virtual GLib.GType ChildType ();" />
+      <MemberType>Method</MemberType>
+      <ReturnValue>
+        <ReturnType>GLib.GType</ReturnType>
+      </ReturnValue>
+      <Parameters />
+      <Docs>
+        <summary>To be added</summary>
+        <returns>a <see cref="T:GLib.GType" /></returns>
         <remarks>To be added</remarks>
       </Docs>
     </Member>
