@@ -4748,30 +4748,125 @@ handle focus grabs.</returns>
         <remarks>None.</remarks>
       </Docs>
     </Member>
-    <Member MemberName="NoWindow">
-      <MemberSignature Language="C#" Value="public bool NoWindow { get; };" />
+    <Member MemberName="IsNoWindow">
+      <MemberSignature Language="C#" Value="public bool IsNoWindow { get; };" />
       <MemberType>Property</MemberType>
       <ReturnValue>
         <ReturnType>System.Boolean</ReturnType>
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>Checks for the NoWindow <see cref="T:Gtk.WidgetFlags" /></summary>
-        <returns>returns true if the NoWindow flag is set</returns>
+        <summary>Convenience property to check Flags for WidgetFlags.NoWindow</summary>
+        <returns>True if the NoWindow flag is set.</returns>
         <remarks>None.</remarks>
       </Docs>
     </Member>
-    <Member MemberName="Drawable">
-      <MemberSignature Language="C#" Value="public bool Drawable { get; };" />
+    <Member MemberName="IsTopLevel">
+      <MemberSignature Language="C#" Value="public bool IsTopLevel { get; };" />
       <MemberType>Property</MemberType>
       <ReturnValue>
         <ReturnType>System.Boolean</ReturnType>
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>Checks to see if the widget is Drawable</summary>
-        <returns>returns true if the widget is Drawable</returns>
+        <summary>Convenience property to check Flags for WidgetFlags.Toplevel</summary>
+        <returns>True if the Toplevel flag is set.</returns>
+        <remarks>None</remarks>
+      </Docs>
+    </Member>
+    <Member MemberName="HasGrab">
+      <MemberSignature Language="C#" Value="public bool HasGrab { get; };" />
+      <MemberType>Property</MemberType>
+      <ReturnValue>
+        <ReturnType>System.Boolean</ReturnType>
+      </ReturnValue>
+      <Parameters />
+      <Docs>
+        <summary>Convenience property to check Flags for WidgetFlags.HasGrab</summary>
+        <returns>True if the HasGrab flag is set.</returns>
         <remarks>None.</remarks>
+      </Docs>
+    </Member>
+    <Member MemberName="IsCompositeChild">
+      <MemberSignature Language="C#" Value="public bool IsCompositeChild { get; };" />
+      <MemberType>Property</MemberType>
+      <ReturnValue>
+        <ReturnType>System.Boolean</ReturnType>
+      </ReturnValue>
+      <Parameters />
+      <Docs>
+        <summary>Convenience property to check Flags for WidgetFlags.CompositeChild</summary>
+        <returns>True if the CompositeChild flag is set</returns>
+        <remarks>None</remarks>
+      </Docs>
+    </Member>
+    <Member MemberName="IsAppPaintable">
+      <MemberSignature Language="C#" Value="public bool IsAppPaintable { get; };" />
+      <MemberType>Property</MemberType>
+      <ReturnValue>
+        <ReturnType>System.Boolean</ReturnType>
+      </ReturnValue>
+      <Parameters />
+      <Docs>
+        <summary>Convenience property to check Flags for WidgetFlags.AppPaintable</summary>
+        <returns>True if the AppPaintable flag is set</returns>
+        <remarks>None</remarks>
+      </Docs>
+    </Member>
+    <Member MemberName="IsDoubleBuffered">
+      <MemberSignature Language="C#" Value="public bool IsDoubleBuffered { get; };" />
+      <MemberType>Property</MemberType>
+      <ReturnValue>
+        <ReturnType>System.Boolean</ReturnType>
+      </ReturnValue>
+      <Parameters />
+      <Docs>
+        <summary>Convenience property to check Flags for WidetFlags.DoubleBuffered</summary>
+        <returns>True if the DoubleBuffered flag is set.</returns>
+        <remarks>None</remarks>
+      </Docs>
+    </Member>
+    <Member MemberName="IsDrawable">
+      <MemberSignature Language="C#" Value="public bool IsDrawable { get; };" />
+      <MemberType>Property</MemberType>
+      <ReturnValue>
+        <ReturnType>System.Boolean</ReturnType>
+      </ReturnValue>
+      <Parameters />
+      <Docs>
+        <summary>Convenience property to check if the widget is Visible and Realized.</summary>
+        <returns>True if the widget is able to be drawn on</returns>
+        <remarks>None</remarks>
+      </Docs>
+    </Member>
+    <Member MemberName="SetFlag">
+      <MemberSignature Language="C#" Value="public void SetFlag (Gtk.WidgetFlags flag);" />
+      <MemberType>Method</MemberType>
+      <ReturnValue>
+        <ReturnType>System.Void</ReturnType>
+      </ReturnValue>
+      <Parameters>
+        <Parameter Name="flag" Type="Gtk.WidgetFlags" />
+      </Parameters>
+      <Docs>
+        <summary>Convenience method to set a flag.</summary>
+        <param name="flag">a <see cref="T:Gtk.WidgetFlags" /> to set</param>
+        <remarks>None.</remarks>
+      </Docs>
+    </Member>
+    <Member MemberName="ClearFlag">
+      <MemberSignature Language="C#" Value="public void ClearFlag (Gtk.WidgetFlags flag);" />
+      <MemberType>Method</MemberType>
+      <ReturnValue>
+        <ReturnType>System.Void</ReturnType>
+      </ReturnValue>
+      <Parameters>
+        <Parameter Name="flag" Type="Gtk.WidgetFlags" />
+      </Parameters>
+      <Docs>
+        <summary>Convenince method to clear a flag</summary>
+        <param name="flag">a <see cref="T:Gtk.WidgetFlags" /> to set</param>
+        <remarks>None</remarks>
       </Docs>
     </Member>
   </Members>
