@@ -1,3 +1,13 @@
+2004-06-10  Todd Berman  <tberman@sevenl.net>
+
+	* gtk/Container.custom: add C# glue for virtualizing ChildType ()
+	* gtk/glue/container.c: add C glue for virtualizing ChildType ()
+	* gtk/Gtk.metadata: hide Container.ChildType ()
+	* gtk/Widget.custom: Add ClearFlag, and SetFlag convenience methods.
+	Also add various IsFlag bool properties for checking for flags.
+	* gtk/glue/widget.c: Fix setting flags.
+	* doc/*: updated Widget docs.
+
 2004-06-09  Todd Berman  <tberman@sevenl.net>
 
 	* gdk/Gdk.metadata: mark Window.SetBackPixmap as null_ok.
